--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,6 @@
   height: 100vh;
   justify-content: center;
   align-items: center;
-  background: #f0f2f5;
+  background: #e3e5e7;
   font-family: Arial, sans-serif;
 }
